force-app/main/default/objects/Account_Title__c/Account_Title__c.object-meta.xml
<CustomObject>
    <description>This object is repository to hold titles</description>
    <label>Account Title</label>
    <nameField>
        <label>Account Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>