force-app/main/default/objects/Account_Title__c/fields/Business_Rule_Title__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox represents the approval necessity from CAT for the title</description>
    <inlineHelpText>This checkbox represents the approval necessity from CAT for the title creation</inlineHelpText>
    <label>Business Rule Title</label>
    <type>Checkbox</type>
</CustomField>