force-app/main/default/objects/Account_Title__c/fields/Duplicate_Title__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Title__c</fullName>
    <label>Duplicate Title</label>
    <length>155</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>