force-app/main/default/objects/Account_Title__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Represents the Status of the Title</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>