force-app/main/default/objects/Account_Title__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Business_Rule_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>